@@ -15,6 +15,16 @@
    <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
    <Categories>flags</Categories>
   </Asset>
+  <Asset file="ca.png" mimetype="image/png">
+   <_Description>Catalan</_Description>
+   <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
+   <Categories>flags</Categories>
+  </Asset>
+  <Asset file="cs.png" mimetype="image/png">
+   <_Description>Czech</_Description>
+   <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
+   <Categories>flags</Categories>
+  </Asset>
   <Asset file="de.png" mimetype="image/png">
    <_Description>German</_Description>
    <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
@@ -82,6 +92,11 @@
   </Asset>
   <Asset file="nl.png" mimetype="image/png">
    <_Description>Dutch</_Description>
+   <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
+   <Categories>flags</Categories>
+  </Asset>
+  <Asset file="no.png" mimetype="image/png">
+   <_Description>Norwegian</_Description>
    <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
    <Categories>flags</Categories>
   </Asset>
